--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     },
     "dependencies": {
         "antd": "^5.8.3",
+        "chart.js": "^4.3.3",
+        "react-chartjs-2": "^5.2.0",
         "react-router-dom": "^6.15.0"
     }
 }
