--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
         "tailwindcss": "^3.1.0"
     },
     "dependencies": {
+        "@reduxjs/toolkit": "^1.9.5",
         "antd": "^5.8.3",
         "chart.js": "^4.3.3",
         "react-chartjs-2": "^5.2.0",
+        "react-redux": "^8.1.2",
         "react-router-dom": "^6.15.0"
     }
 }
