--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
         "chart.js": "^4.3.3",
         "react-chartjs-2": "^5.2.0",
         "react-redux": "^8.1.2",
-        "react-router-dom": "^6.15.0"
+        "react-router-dom": "^6.15.0",
+        "react-toastify": "^9.1.3",
+        "sweetalert2": "^11.7.27"
     }
 }
